Fix alignment

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+#container{
+    margin-top: 100px;
+}
+
 .grid {
     padding: 16px 16px;
     border: 2px solid black;
@@ -5,7 +9,7 @@
 
 .grid-parent {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
 }
 
 .grid-change {
